test/Fail/UnificationAndSubtyping.err
UnificationAndSubtyping.agda:31.12-16: error: [SplitError.UnificationStuck]
I'm not sure if there should be a case for the constructor refl,
because I get stuck when trying to solve the following unification
problems (inferred index ≟ expected index):
  x₀ ≟ x
when checking that the pattern refl has type x₀ ≡ x
